NMJ Salesforce Project/src/objects/Footfalls__c.object
<CustomObject>
    <fields>
        <fullName>Daily_Footfall__c</fullName>
        <description>Total no of daily footfall nos</description>
        <label>Daily Footfall</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sr_No__c</fullName>
        <displayFormat>A{00000}</displayFormat>
        <label>Sr No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <picklist>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Footfall</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Footfall {0} {dd}/{mm}/{yyyy}</displayFormat>
        <label>Footfall</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Footfalls</pluralLabel>
    <recordTypes>
        <fullName>Daily_Footfall_Type</fullName>
        <active>true</active>
        <label>Daily Footfall Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>